--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -227,3 +227,25 @@
 						display: inline-block
 						height: auto
 						width: auto
+
+.player-stats
+	padding: 20px 0
+	+opacity(0)
+	h1
+		color: white
+		font-size: 26px
+		text-align: center
+		margin: 10px 0
+	ul
+		margin-top: 20px
+		&:after
+			content: ''
+			display: table
+			clear: both
+		li
+			padding: 0 10px
+			height: 50px
+			width: 280px
+			color: white
+			display: inline-block
+			float: left
