--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -137,9 +137,25 @@ body {
         border-width: 5px 5px 0 5px;
         border-color: rgba(0, 0, 0, 0.5) transparent transparent; }
     body main .tooltip-map {
+      visibility: hidden;
       color: #ffffff;
-      padding: 10px;
-      background: rgba(0, 0, 0, 0.5); }
+      height: 5em;
+      line-height: 5em;
+      background: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      left: 0;
+      width: 512px;
+      top: -5em; }
+    body main .eventsButton {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, 0.5);
+      color: #ffffff;
+      padding: 5px;
+      border: none;
+      outline: none;
+      cursor: pointer; }
     body main .clear {
       clear: both; }
   body [class*="flash-"] {
