--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -117,9 +117,9 @@
 						font-weight: bold
 
 				p.game-score
-					bottom: 25px
+					top: 20px
 				p.game-type
-					bottom: 5px
+					top: 30px
 
 				ul.players
 					margin-top: 5px
