fix color team bug

--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -211,7 +211,7 @@
 
 			#first-team-resume
 				display: inline-block
-				border-right: 4px solid #2C82C9
+				border-right: 4px solid #E25041
 				height: 48px
 				ul
 					overflow: hidden
@@ -223,7 +223,7 @@
 
 			#second-team-resume
 				display: inline-block
-				border-left: 4px solid #E25041
+				border-left: 4px solid #2C82C9
 				height: 48px
 				ul
 					overflow: hidden
