improve functionnement on event button

--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -130,8 +130,11 @@ body
 
 		.eventsButton
 			position: absolute
-			top: 0
+			bottom: -60px
 			left: 0
+			right: 0
+			margin: auto
+			width: 200px
 			background: rgba(0,0,0,0.5)
 			color: #ffffff
 			padding: 5px
