--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -120,13 +120,15 @@ body
 		.tooltip-map
 			visibility: hidden
 			color: #ffffff
-			height: 5em
-			line-height: 5em
+			height: 20px
+			line-height: 20px
 			background: rgba(0,0,0,0.5)
 			position: absolute
 			left: 0
-			width: 512px
-			top: -5em
+			right: 0
+			margin: auto
+			width: 200px
+			top: 0
 
 		.eventsButton
 			position: absolute
