--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -2,7 +2,7 @@
   background: url(../../images/bg/bg-map.png);
   height: auto !important;
   min-height: 100%;
-  /**
+  /*
    * @see directives/fadeIn.js
    */ }
   .container-summoner .animate-show, .container-summoner .animate-show.ng-hide-add, .container-summoner .animate-show.ng-hide-remove {
@@ -53,7 +53,7 @@
         background: rgba(255, 255, 255, 0.2);
         width: 82%;
         height: 100%;
-        color: #ffffff;
+        color: white;
         text-align: center;
         vertical-align: top; }
         .container-summoner #summoner-form form input#summoner-name:focus {
@@ -68,9 +68,9 @@
         transition: all ease 0.2s;
         width: 15%;
         float: right;
-        background: #FF9C00;
+        background: #ff9c00;
         font-size: 2em;
-        color: #ffffff;
+        color: white;
         border: none;
         outline: none;
         height: 100%;
@@ -99,7 +99,7 @@
         overflow: hidden;
         padding: 2px;
         margin-bottom: 5px;
-        background: #FF9C00;
+        background: #ff9c00;
         cursor: pointer; }
         .container-summoner #summoner-history #match-history li:last-of-type {
           margin-bottom: 0; }
@@ -137,7 +137,7 @@
     -o-opacity: 0;
     opacity: 0; }
     .container-summoner #game #timeline {
-      background: #AAAAAA;
+      background: #aaaaaa;
       height: 3px;
       line-height: 3px;
       margin-top: 15px; }
@@ -146,7 +146,7 @@
         border-radius: 5px;
         height: 10px;
         width: 10px;
-        background: #CCCCCC;
+        background: #cccccc;
         cursor: pointer;
         display: inline-block;
         margin-right: 5px; }
@@ -161,12 +161,10 @@
         .container-summoner #game #match-resume #first-team-resume ul {
           overflow: hidden; }
           .container-summoner #game #match-resume #first-team-resume ul li {
-            border-left: 4px solid #E25041; }
+            border-left: 4px solid #e25041; }
       .container-summoner #game #match-resume #second-team-resume {
         display: inline-block; }
         .container-summoner #game #match-resume #second-team-resume ul {
           overflow: hidden; }
           .container-summoner #game #match-resume #second-team-resume ul li {
-            border-left: 4px solid #2C82C9; }
-
-/*# sourceMappingURL=summoner.css.map */
+            border-left: 4px solid #2c82c9; }
