--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,25 +57,90 @@ body {
   body .ng-scope {
     height: 100%;
     width: 100%; }
-    body .ng-scope #map {
+  body main {
+    height: 100%; }
+    body main [class*="container-"] {
+      height: 100%; }
+    body main #map {
       height: 100%;
       width: 100%;
       background: url(../../images/bg/bg-map.png);
       position: relative;
       display: table; }
-      body .ng-scope #map #svg-container {
+      body main #map #svg-container {
         width: 1013px;
         height: 669px;
         position: absolute;
         top: 50%;
         left: 50%;
         margin: -334px 0 0 -506px; }
-        body .ng-scope #map #svg-container path:hover {
+        body main #map #svg-container path:hover {
           cursor: pointer; }
-  body main {
-    height: 100%; }
-    body main [class*="container-"] {
-      height: 100%; }
+      body main #map #info-container {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 40px; }
+        body main #map #info-container .relative-container {
+          position: relative;
+          width: 100%;
+          height: 40px; }
+          body main #map #info-container .relative-container #loader-info {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin-left: -15px;
+            width: 30px;
+            height: 2px;
+            background: #ff9c00;
+            -webkit-animation: loading 1s infinite ease-in; }
+          body main #map #info-container .relative-container #left-part {
+            overflow: hidden;
+            position: absolute;
+            width: 0%;
+            height: 40px;
+            top: 0;
+            right: 50%;
+            border-top: solid 2px #ff9c00;
+            -webkit-transition: width 0.3s ease-out; }
+            body main #map #info-container .relative-container #left-part #region {
+              right: 30px; }
+            body main #map #info-container .relative-container #left-part #img-c {
+              position: absolute;
+              left: 0; }
+              body main #map #info-container .relative-container #left-part #img-c img {
+                width: 40px;
+                height: 40px; }
+          body main #map #info-container .relative-container #right-part {
+            overflow: hidden;
+            position: absolute;
+            left: 50%;
+            top: 0;
+            height: 40px;
+            width: 0%;
+            border-top: solid 2px #ff9c00;
+            -webkit-transition: width 0.3s ease-out; }
+            body main #map #info-container .relative-container #right-part span {
+              position: absolute;
+              color: #ff9c00;
+              font-size: 24px;
+              padding-top: 10px; }
+            body main #map #info-container .relative-container #right-part #region {
+              left: 140px; }
+            body main #map #info-container .relative-container #right-part #status {
+              left: 340px; }
+      body main #map .info-container-loading #loader-info, body main #map .NaN #loader-info {
+        display: inline-block !important; }
+      body main #map .info-container-loading #loader-info, body main #map .NaN #loader-info {
+        display: inline-block !important; }
+      body main #map .info-container-active .relative-container #left-part {
+        width: 50% !important;
+        -webkit-transition: width 0.3s ease-out; }
+      body main #map .info-container-active .relative-container #right-part {
+        width: 50% !important;
+        -webkit-transition: width 0.3s ease-out; }
     body main #loader {
       width: 100%;
       height: 4px;
@@ -87,10 +152,10 @@ body {
         width: 20%;
         height: 4px;
         left: -16%;
-        background: #FF9C00;
+        background: #ff9c00;
         position: absolute; }
     body main .tooltip {
-      color: #ffffff;
+      color: white;
       padding: 20px;
       background: rgba(0, 0, 0, 0.5); }
       body main .tooltip:after {
@@ -104,7 +169,7 @@ body {
         border-width: 5px 5px 0 5px;
         border-color: rgba(0, 0, 0, 0.5) transparent transparent; }
     body main .tooltip-map {
-      color: #ffffff;
+      color: white;
       padding: 10px;
       background: rgba(0, 0, 0, 0.5); }
     body main .clear {
@@ -119,6 +184,17 @@ body {
     text-align: center; }
   body div.flash-errors {
     background: #257383;
-    color: #ffffff; }
+    color: white; }
 
-/*# sourceMappingURL=main.css.map */
+@-webkit-keyframes loading {
+  0% {
+    width: 50px;
+    margin-left: -25px; }
+
+  50% {
+    width: 0px;
+    margin-left: 0; }
+
+  100% {
+    width: 50px;
+    margin-left: -25px; } }
