temp branch to resolve revert

--- a/app/views/summoner.html
+++ b/app/views/summoner.html
@@ -31,7 +31,7 @@
 
 		<ul id="match-history">
 			<h1>10 dernières parties</h1>
-			<li ng-repeat="(key, game) in gamesResults.games" data-game="{{game.gameId}}" data-mode="{{game.gameMode}}" data-timestamp="0" ng-class="{red: game.teamId == '200', blue: game.teamId =='100', active: $index == selected}" ng-click="select(key)" show-game>
+			<li ng-repeat="(key, game) in gamesResults.games" data-game="{{game.gameId}}" data-mode="{{game.gameMode}}" data-timestamp="0" ng-class="{blue: game.teamId == '200', red: game.teamId =='100', active: $index == selected}" ng-click="select(key)" show-game>
 				<div ng-if="game.stats.win == true">Victoire</div>
 				<div ng-if="game.stats.win == false">Défaite</div>
 				<div class="imgs">
@@ -40,23 +40,23 @@
 					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.8.1/img/spell/{{spells.data[game.spell1].image.full}}' width="24px" height="24px" class="animate-show spell" fade-in>
 					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.8.1/img/spell/{{spells.data[game.spell2].image.full}}' width="24px" height="24px" class="animate-show spell" fade-in>
 				</div>
+				<p class="game-score">
+					<span ng-if="game.stats.championsKilled">{{game.stats.championsKilled}}</span>
+					<span ng-if="!game.stats.championsKilled">0</span>
+					 / 
+					<span ng-if="game.stats.numDeaths">{{game.stats.numDeaths}} </span>
+					<span ng-if="!game.stats.numDeaths">0</span>
+					 / 
+					<span ng-if="game.stats.assists">{{game.stats.assists}} </span>
+					<span ng-if="!game.stats.assists">0</span>
+				</p>
+				<p class="game-type">Type de partie: <strong>{{game.subType}}</strong></p>
 				<div class="scoreAndItems">
-					<p class="game-score">
-						<span ng-if="game.stats.championsKilled">{{game.stats.championsKilled}}</span>
-						<span ng-if="!game.stats.championsKilled">0</span>
-						 / 
-						<span ng-if="game.stats.numDeaths">{{game.stats.numDeaths}} </span>
-						<span ng-if="!game.stats.numDeaths">0</span>
-						 / 
-						<span ng-if="game.stats.assists">{{game.stats.assists}} </span>
-						<span ng-if="!game.stats.assists">0</span>
-					</p>
 <!-- 					<div>
 						<p>{{game.stats.item0}} {{game.stats.item1}} {{game.stats.item2}}</p>
 						<p>{{game.stats.item3}} {{game.stats.item4}} {{game.stats.item5}}</p>
 					</div> -->
 				</div>
-				<p class="game-type">Type de partie: <strong>{{game.subType}}</strong></p>
 				<!-- <ul class="players">
 					<li ng-repeat="player in game.fellowPlayers">
 				<!-- <p style="display: none;"><a href="">{{game.gameId}}</a></p> -->
