--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,34 +55,41 @@ html {
 body {
   height: 100%;
   font-family: "Basic", arial, sans-serif; }
-  body .ng-scope {
+  body .ng-scope #map {
     height: 100%;
-    width: 100%; }
-    body .ng-scope #map {
-      height: 100%;
-      width: 100%;
-      background: url(../../images/bg/bg-map.png);
-      position: relative;
-      display: table; }
-      body .ng-scope #map h1 {
-        color: white;
-        text-align: center;
-        font-size: 48px;
-        font-family: "Basic";
-        margin: 20px auto; }
-      body .ng-scope #map p {
-        text-align: center;
-        color: white;
-        font-family: 16px; }
-      body .ng-scope #map #svg-container {
-        width: 1013px;
-        height: 669px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin: -334px 0 0 -506px; }
-        body .ng-scope #map #svg-container path:hover {
-          cursor: pointer; }
+    width: 100%;
+    background: url(../../images/bg/bg-map.png);
+    position: relative;
+    display: table; }
+    body .ng-scope #map h1 {
+      color: white;
+      text-align: center;
+      font-size: 48px;
+      font-family: "Basic";
+      margin: 20px auto; }
+    body .ng-scope #map p {
+      text-align: center;
+      color: white;
+      font-family: 16px; }
+    body .ng-scope #map #svg-container {
+      width: 1013px;
+      height: 669px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin: -334px 0 0 -506px; }
+      body .ng-scope #map #svg-container path:hover {
+        cursor: pointer; }
+  body .pico-content.modal-events {
+    position: absolute;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    width: 50%;
+    background: #FFB23A !important;
+    border-radius: 0 !important;
+    color: #000; }
   body main {
     height: 100%; }
     body main [class*="container-"] {
@@ -100,8 +107,8 @@ body {
           width: 30px;
           height: 30px;
           position: absolute;
-          top: 50%;
-          left: 50%;
+          top: 50% !important;
+          left: 50% !important;
           transform: translate(-50%, -50%);
           border: 4px solid #Fff;
           animation: loader 2s infinite ease; }
