--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -13,8 +13,6 @@ body
 	font-family: 'Basic', arial, sans-serif
 
 	.ng-scope
-		height: 100%
-		width: 100%
 
 		#map
 			height: 100%
@@ -42,6 +40,14 @@ body
 
 				path:hover 
 					cursor: pointer
+	
+	.pico-content.modal-events
+		+center()
+		position: fixed
+		width: 50%
+		background: $mainColorHover !important
+		border-radius: 0 !important
+		color: #000
 
 	main
 		height: 100%
@@ -59,7 +65,7 @@ body
 					display: block
 					width: 30px
 					height: 30px
-					+center(30px, 30px)
+					+center()
 					border: 4px solid #Fff
 					animation: loader 2s infinite ease
 
