--- a/app/styles/sass/partials/_mixins.sass
+++ b/app/styles/sass/partials/_mixins.sass
@@ -94,8 +94,8 @@
 =black($opacity)
 	background: rgba(0,0,0,$opacity)
 
-=center($width, $height)
+=center()
 	position: absolute
-	top: 50%
-	left: 50%
+	top: 50% !important
+	left: 50% !important
 	transform: translate(-50%, -50%)
