--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 <div id="map">
   <h1>Player of Legends</h1>
-  <p>Sélectionner votre pays</p>
+  <p>Sélectionner la région dans laquelle vous jouez à League of Legend</p>
 	<div id="svg-container"></div>
 	<div id="info-container">
 		<div class="relative-container">
