--- a/app/views/summoner.html
+++ b/app/views/summoner.html
@@ -12,7 +12,7 @@
 		</aside>
 
 		<form ng-submit="getSummoner(summoner)">
-			<p>Merci de renseigner un nom d'invocateur</p>
+			<p>Renseigner votre nom d'invocateur ou celui d'un ami</p>
 			<input type="text" ng-model="summoner.name" id="summoner-name">
 			<button type="button" ng-click="getSummoner(summoner)"><i class="fa fa-arrow-circle-o-right"></i></button>
 		</form>
