--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,7 +8,7 @@
 			<div id="left-part">
 				<div class="relative-container">
 					<div id="img-c">
-						<img ng-repeat="name in nameArray track by $index" src="http://ddragon.leagueoflegends.com/cdn/5.8.1/img/champion/{{name}}">
+						<img ng-repeat="name in names track by $index" src="http://ddragon.leagueoflegends.com/cdn/5.8.1/img/champion/{{name}}">
 					</div>
 				</div>
 			</div>
