--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -105,8 +105,7 @@
         margin-bottom: 5px;
         background: #ffba4d;
         cursor: pointer;
-        position: relative;
-        height: 100px; }
+        position: relative; }
         .container-summoner #summoner-history #match-history li:after {
           content: "";
           display: table;
